app/assets/stylesheets/components/_cards.scss
/* CARD DU PANIER */


.main-card-panier {
  display: flex;
  padding-bottom: 25px;
  padding-top: 25px;
  border-bottom: solid 1px $primary-yellow;
  width: 75vh;
}

.img-card-panier {
  img{
    height: 150px;
    width:150px;
    border: solid 2px $primary-yellow;
  }
}

.quantity-card-panier {
  padding-right: 10px
}

.item-card-quantity {
  padding: 0px 10px 0px 10px
}

.description-card-panier {
  display: flex;
  /*position: relative;*/
  padding-left: 20px;
  .description-card-panier-box1 {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-right: 10px;
    width: 35vh;
    .display-mobile {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
    .description-card-panier-box1-btn-qty {
     /* position: absolute; */
      display: flex;
    }
    .btn-card-panier {
      background-color: black;
      color: $primary-yellow;
      border: solid 1px $primary-yellow;
    }
  }

  .description-card-panier-box3 {
    /*position: relative;*/
    padding-right: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    .description-card-panier-box3-btn-supp {
      /*position: absolute;*/
      background-color: black;
      color: $primary-yellow;
      border: solid 1px $primary-yellow;
    }
  }
}

.total-panier {
  padding-top: 50px;
}

.btn-payer-panier {
  background-color: black;
  color: $primary-yellow;
  border: solid 1px $primary-yellow;
  height: 40px;
  width: 100px;
}



@media (max-width: 600px) {

  .img-card-panier {
    img{
      height: 100px;
      width: 100px;
    }
  }

  .main-card-panier {
    display: flex;
    padding-bottom: 25px;
    width: 48vh;
  }

  .description-card-panier {
    display: flex;
    flex-direction: column;
  }

  .display-mobile {
    display: none;
  }

  ul {
    padding-left: 15px;
  }


}

/* CARD DU PANIER */

/* CARD INDEX PRODUCTS*/

.product-index-card {
  width: 250px;
  justify-self: center;

}

.card-product-index-img {
  width: 250px;
  position:relative;

  img{
    height: 250px;
    width: 250px;
    border: solid 2px $primary-yellow;
  }
  .cta-home-nouveautes{
    position: absolute;
    bottom: 15px;
    right: 15px;
    transition: transform 0.3s ease-in-out;
    background-color: $primary-yellow;
    color: $background;
    padding: 10px 15px;
    border-radius: 50%;
    &:hover{
      transform: scale(1.1);
    }
  }
}

.text-product-index-card {
  text-align: left;
  margin-bottom: 24px;
  p {
    margin: 0;
  }
}

@media (max-width: 700px) {
  .product-index-card {
    width: 200px;
  }

  .card-product-index-img{
    img{
      height: 200px;
      width: 200px;
      border: solid 2px $primary-yellow;
      border-radius: 5px;

    }
  }
}

@media (max-width: 600px) {
  .product-index-card {
    width: 150px;
  }

  .card-product-index-img{
    img{
      height: 150px;
      width: 150px;
      border: solid 2px $primary-yellow;
    }
  }
  .card-product-index-img {
    width: 150px;
  }

}
/* CARD INDEX PRODUCT*/

